<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUserActivity"
    android:background="@drawable/register_user_background"
    android:paddingTop="?attr/actionBarSize"
    android:paddingLeft="@dimen/ten_dp"
    android:paddingRight="@dimen/ten_dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/fourty_sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:id="@+id/welcome"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:background="@drawable/register_relative_layout_design"
        android:layout_marginTop="@dimen/eighteen_dp"
        android:padding="@dimen/ten_dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please, Enter your personal info"
            android:id="@+id/message"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/twelve_dp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/eighteen_sp"/>
        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/message"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@drawable/edittext_design"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/twelve_dp"
            android:paddingRight="@dimen/twelve_dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/name_edit_text"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/twelve_dp"
            android:background="@drawable/edittext_design"
            android:id="@+id/email_address_edittext"
            android:paddingRight="@dimen/twelve_dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/email_address_edittext"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/enter_mobile_number"
            android:inputType="phone"
            android:paddingLeft="@dimen/twelve_dp"
            android:background="@drawable/edittext_design"
            android:id="@+id/phone_number_edittext"
            android:paddingRight="@dimen/twelve_dp"/>
        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/phone_number_edittext"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@drawable/edittext_design"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/twelve_dp"
            android:paddingRight="@dimen/twelve_dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/password_edittext"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/enter_confirm_password"
            android:inputType="textVisiblePassword"
            android:paddingLeft="@dimen/twelve_dp"
            android:background="@drawable/edittext_design"
            android:id="@+id/confirm_password_edittext"/>
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_accept_the_terms_of_the_agreements"
            android:layout_marginTop="@dimen/twelve_dp"
            android:layout_below="@id/confirm_password_edittext"
            android:checked="true"
            android:enabled="false"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox"
            android:text="@string/register"
            android:textAllCaps="false"
            android:id="@+id/sign_up_button"
            android:layout_marginTop="@dimen/twelve_dp"
            android:background="@drawable/sign_in_button_design"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_in"
            android:textSize="@dimen/sixteen_sp"
            android:layout_below="@id/sign_up_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/twelve_dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:onClick="openLoginActivity"/>

    </RelativeLayout>

</RelativeLayout>