<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity"
    android:background="@color/c141414"
    android:padding="@dimen/twenty_dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_00_00_00"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/d200dp"
        android:textSize="@dimen/fifty_sp"
        android:id="@+id/textView"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_below="@+id/textView"
        android:layout_marginTop="?attr/actionBarSize"
        android:textSize="@dimen/eighteen_sp"
        android:textColor="@color/colorWhite"
        android:background="@color/ffc107"
        android:id="@+id/btnStart"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_below="@+id/btnStart"
        android:layout_marginTop="@dimen/ten_dp"
        android:textSize="@dimen/eighteen_sp"
        android:textColor="@color/colorWhite"
        android:background="@color/ffc107"
        android:id="@+id/btnStop"
        />
</RelativeLayout>