<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/register_user_background"
    android:paddingTop="?attr/actionBarSize"
    android:paddingLeft="@dimen/ten_dp"
    android:paddingRight="@dimen/ten_dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/fourty_sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/component_layout"
        android:layout_marginBottom="?attr/actionBarSize"
        android:textColor="@color/colorWhite"
        android:id="@+id/welcome"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_relative_layout_design"
        android:layout_centerVertical="true"
        android:padding="@dimen/ten_dp"
        android:id="@+id/component_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please, Enter your personal info"
            android:id="@+id/message"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/twelve_dp"
            android:layout_marginTop="@dimen/twelve_dp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/eighteen_sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/message"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/enter_email_address"
            android:paddingLeft="@dimen/twelve_dp"
            android:paddingRight="@dimen/twelve_dp"
            android:background="@drawable/edittext_design"
            android:id="@+id/email_address_edittext"
            android:inputType="textEmailAddress"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/email_address_edittext"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/enter_password"
            android:paddingLeft="@dimen/twelve_dp"
            android:paddingRight="@dimen/twelve_dp"
            android:background="@drawable/edittext_design"
            android:id="@+id/password_edittext"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edittext"
            android:layout_alignParentRight="true"
            android:onClick="openForgetPasswordActivity"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:fontFamily="sans-serif"
            android:text="@string/forget_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/eighteen_sp"
            android:id="@+id/forget_password_text_view"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forget_password_text_view"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:id="@+id/log_in_button"
            android:layout_marginTop="@dimen/twelve_dp"
            android:background="@drawable/sign_in_button_design"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_up"
            android:textSize="@dimen/sixteen_sp"
            android:layout_below="@id/log_in_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/twelve_dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:onClick="openSignUpActivity"/>

    </RelativeLayout>

</RelativeLayout>