<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:background="@color/c2a2f39"
    android:paddingTop="?attr/actionBarSize">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_twotone_lock_24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/lock"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@id/lock"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/thirty_sp"
        android:layout_marginTop="@dimen/ten_dp"
        android:id="@+id/foeget_password_text_view"
        />
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/foeget_password_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/twenty_dp"
        android:text="@string/reset"
        android:textColor="@color/c747a85"
        android:textSize="@dimen/eighteen_sp" />
    <TextView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginRight="@dimen/twelve_dp"
        android:text="@string/set"
        android:textColor="@color/c747a85"
        android:textSize="@dimen/eighteen_sp" />
    <EditText
        android:id="@+id/email_id_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginRight="@dimen/twenty_dp"
        android:backgroundTint="@color/c00000000"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/ten_dp"
        android:hint="E-mail Address"
        android:inputType="textEmailAddress"
        android:paddingRight="@dimen/twelve_dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/c5e626c"
        android:textSize="@dimen/eighteen_sp"
        android:textStyle="bold" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingBottom="@dimen/ten_dp"
        android:paddingTop="@dimen/ten_dp"
        android:background="@drawable/vutton_design_one"
        android:layout_below="@id/email_id_textview"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:text="@string/reset_password"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/twenty_sp"
        android:onClick="sendLinkToEmail"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/twenty_sp"
        android:textColor="@color/colorWhite"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:id="@+id/register_textview"
        android:onClick="openRegisterUserActivity"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/c5e626c"
        android:layout_above="@id/register_textview"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/fourteen_sp"
        android:onClick="openRegisterUserActivity"
        />

</RelativeLayout>