<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".ExtraToolsFragment"
    android:background="@drawable/extra_tool_background_design"
    android:padding="@dimen/ten_dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/calculator"
            android:id="@+id/calculator"
            android:textSize="@dimen/twenty_two_sp"
            android:drawableLeft="@drawable/calculator_icon"
            android:drawablePadding="@dimen/eight_dp"
            android:textAllCaps="false"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/twelve_dp"
            android:layout_marginTop="@dimen/twelve_dp"
            android:layout_marginBottom="@dimen/twelve_dp"
            android:background="@drawable/sign_in_button_design"
            />
        <com.google.android.gms.ads.AdView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculator_adview"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            android:layout_below="@id/calculator"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/scientific_calculator"
            android:textSize="@dimen/d22sp"
            android:id="@+id/scientific_calculator"
            android:layout_below="@id/calculator_adview"
            android:drawableLeft="@drawable/scientific_alculator_icon"
            android:drawablePadding="@dimen/eight_dp"
            android:textAllCaps="false"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/twelve_dp"
            android:layout_marginTop="@dimen/twelve_dp"
            android:layout_marginBottom="@dimen/twelve_dp"
            android:background="@drawable/sign_in_button_design"
            />
        <com.google.android.gms.ads.AdView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scientific_calculator_adview"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            android:layout_below="@id/scientific_calculator"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/timer"
            android:id="@+id/timer"
            android:textSize="@dimen/twenty_two_sp"
            android:layout_below="@id/scientific_calculator_adview"
            android:drawableLeft="@drawable/timer"
            android:drawablePadding="@dimen/eight_dp"
            android:layout_marginBottom="@dimen/twelve_dp"
            android:textAllCaps="false"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/twelve_dp"
            android:layout_marginTop="@dimen/twelve_dp"
            android:background="@drawable/sign_in_button_design"
            />
        <com.google.android.gms.ads.AdView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timer_adview"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            android:layout_below="@id/timer"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/log_table"
            android:layout_below="@id/timer_adview"
            android:textSize="@dimen/twenty_two_sp"
            android:id="@+id/log_table"
            android:layout_marginBottom="@dimen/twelve_dp"
            android:drawableLeft="@drawable/log_table"
            android:drawablePadding="@dimen/eight_dp"
            android:textAllCaps="false"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/twelve_dp"
            android:layout_marginTop="@dimen/twelve_dp"
            android:background="@drawable/sign_in_button_design"
            />
        <com.google.android.gms.ads.AdView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_table_adview"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            android:layout_below="@id/log_table"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/trigonometric_equations"
            android:layout_below="@id/log_table_adview"
            android:textSize="@dimen/twenty_two_sp"
            android:layout_marginBottom="@dimen/twelve_dp"
            android:id="@+id/trigonometric_equations"
            android:drawableLeft="@drawable/trigonometry"
            android:drawablePadding="@dimen/eight_dp"
            android:textAllCaps="false"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/twelve_dp"
            android:layout_marginTop="@dimen/twelve_dp"
            android:background="@drawable/sign_in_button_design"
            />
        <com.google.android.gms.ads.AdView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trigonometric_equations_adview"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            android:layout_below="@id/trigonometric_equations"
            />
    </RelativeLayout>

</ScrollView>